# painting-environment-lab-termination-aware

./: README.md  pyproject.toml
docs/: experiment-notes.md  first-benchmark-note.md  first-benchmark-result.md  future-work.md  target-generator-design.md  termination-design.md
examples/: compare_targets.py
src/painting_env_lab/: __init__.py  brush.py  cli.py  config.py  experiment.py  greedy.py  metrics.py  reporting.py  targets.py
tests/: test_brush.py  test_targets.py  test_termination.py
