[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "painting-environment-lab-termination-aware"
version = "0.1.0"
description = "A termination-aware greedy painting environment for studying episode design."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yoshiyuki Kono"}]
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
painting-env-lab = "painting_env_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
